; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_check_photo.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-data.c_check_photo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mode = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Unsupported mode\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_photo(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp sge i32 %6, 126
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp sge i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32, i32* @mode, align 4
  switch i32 %14, label %18 [
    i32 129, label %15
    i32 128, label %16
    i32 130, label %17
  ]

15:                                               ; preds = %9
  store i32 1, i32* %3, align 4
  br label %24

16:                                               ; preds = %9
  store i32 1, i32* %3, align 4
  br label %24

17:                                               ; preds = %9
  store i32 1, i32* %3, align 4
  br label %24

18:                                               ; preds = %9
  br i1 true, label %19, label %20

19:                                               ; preds = %18
  br label %20

20:                                               ; preds = %19, %18
  %21 = phi i1 [ false, %18 ], [ false, %19 ]
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  br label %24

24:                                               ; preds = %8, %15, %16, %17, %20
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
